# ssbd-stimming-recognition

./: .gitignore  README.md  SSBD_Behavior_Recognition_Roadmap.md  pyproject.toml
.github/workflows/: tests.yml
configs/: README.md
docs/: README.md  data_ethics_policy.md  final_project_status.md  full_ssbdplus_benchmark_report.md  limitations.md  model_card.md  phase1_readiness_report.md  phase2_notes.md  phase2_readiness_report.md  phase3_notes.md  phase3_readiness_report.md  phase4_notes.md  phase4_readiness_report.md  ssbd_data_access_report.md  stage_f_distilled_ms_stf.md  stage_g_d_ms_stf_colab.md
notebooks/: ssbd_full_benchmark_colab.md
scripts/: README.md  build_artifact_manifest.py  explain_feature_importance.py  render_skeleton_svg.py  run_baselines.py  run_distilled_ms_stf.py  run_loso.py  run_permutation_test.py  validate_svgs.py
scripts/acquisition/: README.md  resolve_videos.py
scripts/benchmark/: run_full_ssbdplus_colab_benchmark.py  run_stage_g_d_ms_stf_colab.py
scripts/diagnostics/: README.md  leaky_split_ablation.py
scripts/features/: build_feature_table.py
scripts/packaging/: build_ssbd_colab_package.py
scripts/pose/: extract_keypoints.py
src/ssbd_behavior/: __init__.py
src/ssbd_behavior/acquisition/: __init__.py  manifest.py  reporting.py  ssbdplus.py
src/ssbd_behavior/evaluation/: __init__.py  distilled_ms_stf_eval.py  metrics.py  provenance.py  reporting.py  svg_validation.py
src/ssbd_behavior/features/: __init__.py  engineering.py  multiscale_temporal.py  pipeline.py  windowing.py
src/ssbd_behavior/interpretability/: __init__.py  feature_importance.py  (+1 more)
tests/: test_acquisition.py  test_baselines.py  test_distilled_ms_stf.py  test_docs_guardrails.py  test_engineering.py  test_extract_keypoints.py  test_feature_importance.py  test_feature_pipeline.py  test_full_ssbdplus_colab_benchmark.py  test_import.py  test_keypoints.py  test_leaky_split_ablation.py  test_loso.py  test_metrics.py  test_multiscale_temporal.py  test_packaging_helper.py  test_permutation.py  test_provenance.py  test_reporting.py  test_resolve_videos.py  test_skeleton_svg.py  test_ssbdplus_parser.py  test_stage_g_colab_workflow.py  test_svg_validation.py  test_validation_splits.py  test_windowing.py
(+11 files in other folders)
