[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssbd-behavior-recognition"
version = "0.1.0"
description = "Lightweight scaffold for SSBD proxy motor-behavior recognition research."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "SSBD Behavior Recognition Project" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
