[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssbd-behavior-recognition"
version = "0.1.0"
description = "Lightweight scaffold for SSBD proxy motor-behavior recognition research."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "SSBD Behavior Recognition Project" }
]
dependencies = [
  "defusedxml>=0.7.1",
  "numpy>=1.26",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
  "pip-audit>=2.7",
  "pytest>=8.0",
]
benchmark = [
  "mediapipe>=0.10.14",
  "opencv-python-headless>=4.10",
  "yt-dlp>=2025.1.15",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
